3.58.13

	* https://pm.cetera.ru/browse/CCD-1331

3.58.12

	* FO. Multiple register forms on one page.

3.58.11

	* API. New method \Cetera\Iterator\User::inGroup($gid)

3.58.10

	* fixed bug in \Cetera\Server::getById()

3.58.9

	* fixed \Cetera\User::create
	
3.58.8

	* Bugfix in \Cetera\Traits\Extendable
	
3.58.7

	* Bugfix in \Cetera\Traits\Extendable

3.58.6

	* Bugfix. https://pm.cetera.ru/browse/RRCC-339
	* BackOffice. В файловом менеджере возможна загрузка только в www/uploads https://pm.cetera.ru/browse/CCD-1314
	* API. Трейт \Cetera\Traits\Extendable для классов, которые могут быть расширены в пользовательских темах.

3.58.5

	* Bugfix. https://pm.cetera.ru/browse/CCD-1310
	* Bugfix. https://pm.cetera.ru/browse/CCD-1308
	
3.58.4

	* BackOffice. Улучшена работа сортировки порядка полей при редактировании типа материала
	* Bugfix. https://pm.cetera.ru/browse/CCD-1306

3.58.3

	* Bugfix. Исправлено формирование префикса namespace для каталога themes/

3.58.2

	* BackOffice https://pm.cetera.ru/browse/CCD-1304 в карточке радактирования материала добавлены табы со списком материалов, ссылающихся на данный полями "Ключеные слава" и "Ссылка на группу материалов"
	* https://pm.cetera.ru/browse/CCD-1303

3.58.1
	* Bugfix https://pm.cetera.ru/browse/CCD-1301